# encoded

./: Cargo.toml  LICENSE  insta.yaml
core/: Cargo.toml
core/src/: cli.rs  ffmpeg.rs  fs.rs  main.rs  tags.rs  util.rs
core/src/snapshots/: encoded__ffmpeg__argument__test__Argument__basic.snap
core/src/video/: mod.rs  preview.rs  stats.rs  zones.rs
core/src/video/encoder/: mod.rs  params.rs
genetic/: Cargo.toml
genetic/src/: main.rs
src/: check.rs  main.rs  tags.rs
src/video/: encoder.rs  mod.rs
