[package]
name = "encoded"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive", "wrap_help", "unicode"] }
color-eyre = "0.6.3"
notify = "6.1.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
glob = "0.3.1"
itertools = "0.13.0"
nom = "7.1.3"
either = "1.13.0"
percentage = "0.1.0"
time = "0.3.36"
strum = { version = "0.26.3", features = ["derive"] }
bounded-integer = { version = "0.5.7", features = ["macro", "std", "step_trait"] }
