[package]
name = "encoded"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive", "wrap_help", "unicode"] }
color-eyre = "0.6.3"
notify = "6.1.1"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
glob = "0.3.1"
itertools = "0.13.0"
nom = "7.1.3"
either = "1.13.0"
strum = { version = "0.26.3", features = ["derive"] }
humansize = "2.1.3"
size = "0.4.1"
derive_more = { version = "1.0.0", features = ["full"] }
regex = "1.11.0"
percent-rs = "0.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
tempfile = "3.13.0"
convert_case = "0.6.0"
proc_macros = { git = "https://github.com/t-nil/various_rust_macros.git", version = "0.1.0" }
decl_macros = { git = "https://github.com/t-nil/various_rust_macros.git" }
serde = { version = "1.0.210", features = ["derive"] }
derive_builder = "0.20.1"
atomic-write-file = "0.2.1"
typestate = "0.8.0"
sorted-vec = { version = "0.8.3", features = ["serde"] }
psutil = "3.3.0"

[dev-dependencies]
insta = { version = "1.40.0", features = ["json", "glob", "filters"] }
test-log = { version = "0.2.16", features = [
    "color",
    "trace",
], default-features = false }
uuid = { version = "1.10.0", features = ["rng", "v4"] }

# speed up insta
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
